--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="surfe.pro" content="4581145d88cca0fd269cb2b74f59dda5">
   <meta name="6a97888e-site-verification" content="4b59df98a775420d029cb3dbfbcedd7e">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -20,7 +21,7 @@
 
 <body>
   <div id="alerta">
-    <p><b>Attention! This project is under development, unfortunately our extension is not yet available.</b></p>
+    <p><b>| Attention! This project is under development, unfortunately our extension is not yet available.</b></p>
   </div>
   <header>
     
