--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="surfe.pro" content="4581145d88cca0fd269cb2b74f59dda5">
-  <meta name="6a97888e-site-verification" content="4b59df98a775420d029cb3dbfbcedd7e">
+  
+  <meta name="surfe.pro" content="738439ea998c871bf7f9f72ef3c563ee">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,13 +21,13 @@
 
 <body>
   <div id="alerta">
-    <p><b>| Attention! This project is under development, unfortunately our extension is not yet available.</b></p>
+    <p><b>Attention! This project is under development, unfortunately our extension is not yet available.</b></p>
   </div>
   <header>
     
     <h1>Page<span style="color:#24B764">Pay</span></h1>
     <nav>
-      <a href="">Download</a>
+      <a href="https://www.highcpmrevenuegate.com/nbqcvtti?key=6f599e6048b218920902145439e583e9">Download</a>
       <!--<a href="">How Funcione</a>
       <a href="">Help</a!-->
     </nav>
@@ -50,14 +50,13 @@
       <p><b>Is it possible to earn via smartphone?</b></b> Yes! If you are on your smartphone, you can use our extension via <a href="https://play.google.com/store/apps/details?id=com.kiwibrowser.browser">Kiwi Browser.</a></p>
       
       <a id="a" href="https://www.highcpmrevenuegate.com/nbqcvtti?key=6f599e6048b218920902145439e583e9">Support the project by clicking here</a>
-      <iframe data-aa='2268220' src='//acceptable.a-ads.com/2268220' style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
+      <script type='text/javascript' src='//pl20966808.highcpmrevenuegate.com/be/9c/40/be9c409fe0c6c3b11480d6d138b7b757.js'></script>
     </section>
   </main>
   <footer>
     <p>
       <button>Instalar extensão</button>
-      <a id="aads" href="https://www.highcpmrevenuegate.com/nbqcvtti?key=6f599e6048b218920902145439e583e9">Not click</a>
-    </p>
+      <a id="aads" href="https://www.highcpmrevenuegate.com/nbqcvtti?key=6f599e6048b218920902145439e583e9">Plus</a>
   </footer>
   <!-- Project -->
   <script src="main.js"></script>
