--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <p><b>Is it possible to earn via smartphone?</b></b> Yes! If you are on your smartphone, you can use our extension via <a href="https://play.google.com/store/apps/details?id=com.kiwibrowser.browser">Kiwi Browser.</a></p>
       
       <a id="a" href="https://www.highcpmrevenuegate.com/nbqcvtti?key=6f599e6048b218920902145439e583e9">Support the project by clicking here</a>
+      <iframe data-aa='2268220' src='//acceptable.a-ads.com/2268220' style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
       <script type='text/javascript' src='//pl20966808.highcpmrevenuegate.com/be/9c/40/be9c409fe0c6c3b11480d6d138b7b757.js'></script>
     </section>
   </main>
